@@ -583,6 +583,11 @@ sub encoding_system_default {
 sub encoding_from_string {
 	my $content = shift;
 
+	# Because Encode::Guess is slow and expensive, do an initial fast
+	# regexp scan for the simplest and most common "ascii" encoding.
+	# Check for POSIX printable characters, plus the two newline characters.
+	return 'ascii' unless $content =~ /[^[:print:]\015\012]/;
+
 	# FIX ME
 	# This is a just heuristic approach. Maybe there is a better way. :)
 	# Japanese and Chinese have to be tested. Only Korean is tested.
